--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,7 @@ if(EMSCRIPTEN)
   endif()
 else()
   add_subdirectory(src/pmp)
+  add_subdirectory(src/polygon-laplacian)
   if(PMP_BUILD_APPS)
     add_subdirectory(src/apps)
   endif()
